changed ratings to show on desktop

--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,9 @@ body {
   font-size: 16px;
   padding: 10px 0px; }
 
+.post__content--desktop {
+  display: none; }
+
 .post__header {
   margin: 0px 5%;
   font-weight: 300; }
@@ -222,6 +225,8 @@ body {
     flex-direction: row; }
   .post__img-wrapper {
     padding-right: 10px; }
+  .post__content--desktop {
+    display: flex; }
   .post__text--last-row {
     flex: 0 0 auto; } }
 
