changed layout for thumbnails 1 to 2 to 3 columns

--- a/css/main.css
+++ b/css/main.css
@@ -232,9 +232,9 @@ body {
 
 .thumbnail {
   display: flex;
+  flex: 1 1 46%;
   margin: 10px 10px;
-  flex-direction: column;
-  width: 46%; }
+  flex-direction: column; }
 
 .thumbnail-wrapper {
   display: flex;
@@ -262,7 +262,7 @@ body {
 */
 @media screen and (min-width: 1020px) {
   .thumbnail {
-    width: calc(33.3333% - 20px); } }
+    flex: 0 1 calc(33.3333% - 20px); } }
 
 .flex-nav {
   align-content: flex-start;
