--- a/css/main.css
+++ b/css/main.css
@@ -37,9 +37,12 @@ body {
   padding: 0px 20px;
   text-decoration: none;
   text-transform: uppercase;
-  transition: background-color 0.5s; }
+  transition: all 0.5s; }
   .header__btn:hover {
     background-color: #4b4b4b; }
+
+.header__btn--isOpen {
+  margin-left: -125px; }
 
 .header__btn--nav {
   background-color: transparent;
@@ -109,6 +112,8 @@ body {
 */
 @media screen and (min-width: 1100px) {
   .header__btn--nav {
+    display: flex; }
+  .header__btn--site {
     display: flex; } }
 
 .rating {
