--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -14,10 +14,13 @@
   padding: 0px 20px;
   text-decoration: none;
   text-transform: uppercase;
-  transition: background-color 0.5s;
+  transition: all 0.5s;
   &:hover {
     background-color: $color-dark-lite;
   }
+}
+.header__btn--isOpen {
+  margin-left: -125px;
 }
 .header__btn--nav {
   background-color: transparent;
@@ -32,6 +35,7 @@
 .header__btn--site {
   background-color: $color-green;
   color: $color-white;
+  //display: none;
 }
 .header__content {
   border-bottom: 1px solid $color-gray-md;
@@ -87,11 +91,15 @@
   position: fixed;
   top:0;
 }
+
 /*
   screen over 1100px
 */
 @media screen and ( min-width: 1100px) {
   .header__btn--nav {
+    display: flex;
+  }
+  .header__btn--site {
     display: flex;
   }
 }
