changed menu button hover state

--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,8 @@ body {
   text-transform: uppercase;
   transition: all 0.5s; }
   .header__btn:hover {
-    background-color: #4b4b4b; }
+    background-color: #4b4b4b;
+    color: #fff; }
 
 .header__btn--isOpen {
   margin-left: -125px; }
