--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ body {
   height: auto;
   justify-content: center;
   padding: 0px 20px;
+  text-align: center;
   text-decoration: none;
   text-transform: uppercase;
   transition: all 0.5s; }
