--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -12,6 +12,7 @@
   //flex: 1;
   justify-content: center;
   padding: 0px 20px;
+  text-align: center;
   text-decoration: none;
   text-transform: uppercase;
   transition: all 0.5s;
